edit controller, usecase, add tables
